<resources>
    <string name="app_name">My Application</string>
    <string name="today">Today</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="good_morning_buddy">Good Morning Buddy</string>
    <string name="search">Search</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
</resources>