<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white"
        app:menu="@menu/menu_bottom_navigation"
        tools:targetApi="lollipop" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/hd"
                android:scaleType="centerCrop" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorSemiDark"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/app_name"
                android:padding="7dp"
                android:src="@drawable/babu"
                android:background="@drawable/menu_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorwwhite" />

            <TextView
                android:id="@+id/textGoodMorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/good_morning_buddy"
                android:textColor="@color/colorwwhite"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageMenu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:padding="4dp"
                android:background="@drawable/search_background"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/textGoodMorning">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/sr"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textColor="@color/colorPrimaryText"
                    android:gravity="center_vertical"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/search"
                    android:textSize="18sp"
                    tools:ignore="Autofill"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/colorSemiDark" />
            </LinearLayout>
                <View
                    android:id="@+id/viewSupporter"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="50dp" />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardDietChart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                app:cardBackgroundColor="@color/colorwwhite"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toStartOf="@id/cardExercise"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ddt"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/diet_chart"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardExercise"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardDietChart"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorwwhite"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/duty"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/exercises"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMeditation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/cardYoga"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorwwhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardDietChart"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/md"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/meditation"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardYoga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardMeditation"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorwwhite"
                app:layout_constraintTop_toBottomOf="@id/cardExercise"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/yyg"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/yoga"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            
            

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>